# patchflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
patchflow/: __init__.py  cli.py  doctor.py
patchflow/analysis/: clustering.py  scope.py  scoring.py
patchflow/cleaning/: __init__.py  branch_builder.py
patchflow/commands/: analyze.py  clean.py  doctor.py  status.py  tui.py
patchflow/git/: commits.py  diff.py  repo.py
patchflow/github/: __init__.py  pr_status.py
patchflow/tui/: __init__.py  app.py  presenter.py
patchflow/utils/: output.py
tests/: test_cli.py  test_doctor.py  test_json_output.py  test_pr_status.py  test_tui_presenter.py
vscode-extension/: .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: clientErrors.ts  commandArgs.ts  dashboard.ts  extension.ts  patchflowClient.ts  types.ts  webview.ts
vscode-extension/test/: clientErrors.test.js  commandArgs.test.js  dashboard.test.js
