[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchflow"
version = "0.1.0"
description = "Local-first CLI for cleaning messy branches into mergeable pull requests."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Neil Nair" }]
dependencies = [
  "click>=8.1,<9",
  "textual>=0.61,<0.70",
]

[project.scripts]
patchflow = "patchflow.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["patchflow*"]
